# almond

./: .gitignore  README.md  pyproject.toml
almond/: almond.py  builder.py  producer.py  resolver.py  support.py
examples/: simple_almond.py
