[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "almond"
version = "0.0.1"
requires-python = ">=3.7"
description = "Фреймворк для динамической подстановки переменных."
readme = "README.md"
authors = [
    { name = "Зорин Никита Евгеньевич", email = "nikita00zorinnn@mail.ru" },
]
classifiers = [
    "Typing :: Typed",
]

dependencies = [
]
